Fix java 17 code smells #2