@@ -165,7 +165,7 @@ public class BackendRequestFactory {
         .filter(isScalarField)
         .filter(not(isIntrospectionField))
         .flatMap(this::mapScalarFieldToFieldRequests)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private Stream<FieldRequest> mapScalarFieldToFieldRequests(SelectedField selectedField) {
@@ -237,7 +237,7 @@ public class BackendRequestFactory {
               .aggregateFields(getAggregateFields(aggregationObjectType, selectedField.getSelectionSet()))
               .build();
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<AggregateField> getAggregateFields(ObjectType<?> objectType,
@@ -245,7 +245,7 @@ public class BackendRequestFactory {
     return selectionSet.getImmediateFields()
         .stream()
         .map(selectedField -> createAggregateField(objectType, selectedField))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private AggregateField createAggregateField(ObjectType<?> objectType, SelectedField selectedField) {
@@ -303,7 +303,7 @@ public class BackendRequestFactory {
             .containsKey(KEY_FIELD))
         .filter(argument -> argumentValues.containsKey(argument.getName()))
         .map(argument -> createKeyCriteria(objectType, argumentValues, argument))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private KeyCriteria createKeyCriteria(ObjectType<?> objectType, Map<String, Object> argumentMap,
@@ -347,7 +347,7 @@ public class BackendRequestFactory {
             .fieldPath(createFieldPath(objectType, config.getField()))
             .direction(config.getDirection())
             .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private String formatSortEnumName(String enumName) {
